--- a/Frontend/src/app/systemconfig/systemconfig.component.html
+++ b/Frontend/src/app/systemconfig/systemconfig.component.html
@@ -1,1 +1,75 @@
-<p>systemconfig works!</p>
+<div class="container text-center mt-5">
+
+  <div class="alert alert-success" role="alert" *ngIf="showAlert">
+    Save data successfully
+  </div>
+
+  <!-- Circle Section -->
+  <div style="background-color: {{ statusColor }}" class="circle mx-auto mb-4">
+    <span class="text-white font-weight-bold">{{ status }}</span>
+  </div>
+
+  <!-- Status Row -->
+  <div class="row mb-4">
+    <div class="col">
+      <h4>Total Tickets</h4>
+      <h4>{{ totalTickets }}</h4>
+    </div>
+    <div class="col">
+      <h4>Ticket Release Rate</h4>
+      <h4>{{ ticketReleaseRate }}</h4>
+    </div>
+    <div class="col">
+      <h4>Customer Retrieval Rate</h4>
+      <h4>{{ customerRetrievalRate }}</h4>
+    </div>
+    <div class="col">
+      <h4>Max Ticket Capacity</h4>
+      <h4>{{ maxTicketCapacity }}</h4>
+    </div>
+<!--    <div class="col">-->
+<!--      <h4>Status 5</h4>-->
+<!--      <h4>{{  }}</h4>-->
+<!--    </div>-->
+  </div>
+
+  <!-- Form Section -->
+  <form class="status-form" [formGroup]="form" (ngSubmit)="updateData()">
+    <div class="form-group">
+      <div class="input-group mb-3">
+        <span class="input-group-text">Total Tickets</span>
+        <input formControlName="totalTickets" type="text" class="form-control" aria-label="Sizing example input"
+               aria-describedby="inputGroup-sizing-default">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-group mb-3">
+        <span class="input-group-text">Ticket Release Rate</span>
+        <input formControlName="ticketReleaseRate" type="text" class="form-control" aria-label="Sizing example input"
+               aria-describedby="inputGroup-sizing-default">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-group mb-3">
+        <span class="input-group-text">Customer Retrieval Rate</span>
+        <input formControlName="customerRetrievalRate" type="text" class="form-control" aria-label="Sizing example input"
+               aria-describedby="inputGroup-sizing-default">
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="input-group mb-3">
+        <span class="input-group-text">Max Ticket Capacity</span>
+        <input formControlName="maxTicketCapacity" type="text" class="form-control" aria-label="Sizing example input"
+               aria-describedby="inputGroup-sizing-default">
+      </div>
+    </div>
+<!--    <div class="form-group">-->
+<!--      <div class="input-group mb-3">-->
+<!--        <span class="input-group-text">System status</span>-->
+<!--        <input type="text" class="form-control" aria-label="Sizing example input"-->
+<!--               aria-describedby="inputGroup-sizing-default">-->
+<!--      </div>-->
+<!--    </div>-->
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
