--- a/Frontend/src/app/systemconfig/systemconfig.component.html
+++ b/Frontend/src/app/systemconfig/systemconfig.component.html
@@ -56,29 +56,29 @@
   </div>
 
   <!-- Form Section -->
-  <form class="status-form" [formGroup]="form" (ngSubmit)="updateData()">
-    <div class="form-group">
+  <form class="status-form fm" [formGroup]="form" (ngSubmit)="updateData()">
+    <div class="form-group bx">
       <div class="input-group mb-3">
         <span class="input-group-text">Total Tickets</span>
         <input formControlName="totalTickets" type="text" class="form-control" aria-label="Sizing example input"
                aria-describedby="inputGroup-sizing-default">
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group bx">
       <div class="input-group mb-3">
         <span class="input-group-text">Ticket Release Rate</span>
         <input formControlName="ticketReleaseRate" type="text" class="form-control" aria-label="Sizing example input"
                aria-describedby="inputGroup-sizing-default">
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group bx">
       <div class="input-group mb-3">
         <span class="input-group-text">Customer Retrieval Rate</span>
         <input formControlName="customerRetrievalRate" type="text" class="form-control" aria-label="Sizing example input"
                aria-describedby="inputGroup-sizing-default">
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group bx">
       <div class="input-group mb-3">
         <span class="input-group-text">Max Ticket Capacity</span>
         <input formControlName="maxTicketCapacity" type="text" class="form-control" aria-label="Sizing example input"
